<resources>
    <string name="app_name">Build Your Own Converter</string>
    <string name="tab_text_1">Converter</string>
    <string name="tab_text_2">Favorites</string>
    <string name="tab_text_3">Set List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="converter_fragment_test">This is the converter fragment speaking...</string>
    <string name="home_set_fragment_test">Home Set Fragment</string>
    <string name="set_list_fragment_test">Set List Fragment</string>

    <string name="action_1">Convert</string>

    <!--Email-->
    <string name="info_email">rayadevinfo@gmail.com</string>


    <!-- Unit Categories -->
    <string name="unit_category_distance">Distance</string>
    <string name="unit_category_volume">Volume</string>
    <string name="unit_category_weight">Weight</string>
    <string name="unit_category_temperature">Temperature</string>
    <string name="unit_category_time">Time</string>
    <string name="unit_category_speed">Speed</string>
    <string name="unit_category_area">Area</string>

    <!--Spinner Titles -->
    <string name="spinner_area_title">Area</string>
    <string name="spinner_currency_title">Currency</string>
    <string name="spinner_distance_title">Distance</string>
    <string name="spinner_temperature_title">Temperature</string>
    <string name="spinner_time_title">Time</string>
    <string name="spinner_volume_title">Volume</string>
    <string name="spinner_weight_title">Weight</string>


    <!-- Area Preset Units -->
    <string name="area_hectare">Hectare</string>
    <string name="area_square_kilometer">Sq Kilometer</string>
    <string name="area_square_meter">Sq Meter</string>
    <string name="area_square_centimeter">Sq Centimeter</string>
    <string name="area_acre">Acre</string>
    <string name="area_square_mile">Sq Mile</string>
    <string name="area_square_foot">Sq Foot</string>
    <string name="area_square_inch">Sq Inch</string>


    <!--Currency Preset Units -->
    <string name="currency_USD">USD</string>
    <string name="currency_EUR">EUR</string>
    <string name="currency_CAD">CAD</string>
    <string name="currency_MXN">MXN</string>
    <string name="currency_AUD">AUD</string>
    <string name="currency_NZD">NZD</string>
    <string name="currency_JPY">JPY</string>
    <string name="currency_CNY">CNY</string>


    <!-- Distance Preset Units -->
    <string name="distance_kilometer">Kilometer</string>
    <string name="distance_meter">Meter</string>
    <string name="distance_centimeter">Centimeter</string>
    <string name="distance_millimeter">Millimeter</string>
    <string name="distance_miles">Mile</string>
    <string name="distance_yard">Yard</string>
    <string name="distance_foot">Foot</string>
    <string name="distance_inch">Inch</string>

    <!-- Temperature Preset Units -->
    <string name="temperature_fahrenheit">Fahrenheit</string>
    <string name="temperature_celsius">Celsius</string>
    <string name="temperature_kelvin">Kelvin</string>

    <!-- Time Preset Units -->
    <string name="time_decade">Decade</string>
    <string name="time_year">Year</string>
    <string name="time_month">Month</string>
    <string name="time_week">Week</string>
    <string name="time_day">Day</string>
    <string name="time_hour">Hour</string>
    <string name="time_minute">Minute</string>
    <string name="time_second">Second</string>

    <!-- Volume Preset Units -->
    <string name="volume_gallon">Gallon</string>
    <string name="volume_quart">Quart</string>
    <string name="volume_fluid_ounce">Fluid Ounce</string>
    <string name="volume_cup">Cup</string>
    <string name="volume_tablespoon">Tablespoon</string>
    <string name="volume_teaspoon">Teaspoon</string>
    <string name="volume_cubic_meter">Cubic Meter</string>
    <string name="volume_litre">Litre</string>
    <string name="volume_centiliter">Centiliter</string>
    <string name="volume_milliliter">Milliliter</string>

    <!-- Weight Preset Units -->
    <string name="weight_metric_ton">Metric Tonne</string>
    <string name="weight_kilogram">Kilogram</string>
    <string name ="weight_gram">Gram</string>
    <string name ="weight_ton">Ton</string>
    <string name ="weight_pound">Pound</string>
    <string name ="weight_ounce">Ounce</string>


</resources>