<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    style="@style/custom_scrollview_style">

    <LinearLayout
        android:id="@+id/masterAreaLinearLayout_Preset_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Temp_A1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_celsius"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:id="@+id/Temp_A2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_fahrenheit"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:id="@+id/Temp_A3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_kelvin"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_centimeter"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_acre"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_mile"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_foot"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_inch"
                    style="@style/srollview_textview_style"/>


            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Temp_B1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_celsius"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:id="@+id/Temp_B2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_fahrenheit"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:id="@+id/Temp_B3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_kelvin"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_centimeter"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_acre"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_mile"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_foot"
                    style="@style/srollview_textview_style"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_square_inch"
                    style="@style/srollview_textview_style"/>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</LinearLayout>